--- a/Ptvr16WebLibrary/web/index.html
+++ b/Ptvr16WebLibrary/web/index.html
@@ -16,12 +16,15 @@ and open the template in the editor.
         <hr>
         <p><a href="page1.jsp">Page1</a></p>
         <hr>
-        <p><a href="page2">Page2</a></p>
+        <p><a href="showListBooks">Список книг</a></p>
         <hr>
-        <p><a href="page3">Page3</a></p>
+        <p><a href="showListReaders">Список читателей</a></p>
         <hr>
-        <p><a href="page4">Page4</a></p>
+        <p><a href="showPageGiveBook">Выдача книги</a></p>
         <hr>
+        <p><a href="page5">Добавить книгу</a></p>
+        <hr>
+        <p><a href="page6">Добавить читателя</a></p>
         <script src="js/index.js"></script>
     </body>
 </html>
